<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="3" 
        xmlns:android="http://schemas.android.com/apk/res/android">
        
	<ImageButton
		android:id="@+id/itemPictureButton"
		android:layout_width="fill_parent"
		android:layout_height="125dp"
		android:onClick="itemPictureButtonPressed"
		android:src="@drawable/question_mark" />
	
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:text="@string/addPictureMessage" />
   	
<GridLayout
    android:layout_width="match_parent"
    android:layout_height="275dp"
    android:columnCount="5"
    android:orientation="vertical"
    android:useDefaultMargins="true" >

<TextView
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="2"
        android:text="@string/location" />
    
    <TextView
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="1"
        android:text="@string/name" />
    
    <TextView
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="3"
        android:text="@string/reward" />
    
    <TextView
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="4"
        android:text="@string/type" />
    
    <TextView
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="5"
        android:text="@string/category" />
    
    <TextView
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="6"
        android:text="@string/description" />

    <EditText
        android:id="@+id/itemNameInput"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:ems="10"
        android:hint="name of item"
        android:inputType="text" />
    
    <EditText
        android:id="@+id/itemTypeInput"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
        android:ems="10"
        android:hint="Lost or Found"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/itemRewardInput"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:ems="10"
        android:hint="None or $$$"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/itemLocationInput"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:ems="10"
        android:hint="location of item"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/itemCategoryInput"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5"
        android:ems="10"
        android:hint="Misc/Heirloom/Keepsake"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/itemDescriptionInput"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="6"
        android:ems="10"
        android:hint="description of item"
        android:inputType="textPassword" />
    
</GridLayout>

	    <Button
        android:id="@+id/submitItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="addItemButtonPressed"
        android:text="@string/submit" />
        
    </LinearLayout>