<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="5"
    android:useDefaultMargins="true">
    <TextView
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_row="0"
        android:text="@string/login"
        android:textSize="32dip" />

    <TextView
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="1"
        android:text="@string/loginName" >
    </TextView>

    <EditText
        android:id="@+id/loginNameInput"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_row="1"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="211dp"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_row="2"
        android:ems="8"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_column="2"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="3"
        android:text="@string/login"
        android:onClick="loginButtonPressed" />

    <Button
        android:id="@+id/register"
        android:layout_column="3"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:text="@string/register"
        android:onClick="registerButtonPressed" />

    <TextView
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="2"
        android:text="@string/password" />

    <TextView
        android:id="@+id/passwordStatus"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="4"
        android:visibility="gone"
        android:text="@string/passwordUnsuccessful"
        android:textColor="#FF0000" />

</GridLayout>