<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="5"
    android:orientation="vertical"
    android:useDefaultMargins="true" >

    <TextView
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40sp"
        android:layout_row="0"
        android:text="@string/register"
        android:textSize="32dip" />

    <TextView
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="2"
        android:text="@string/password" />

    <TextView
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="1"
        android:text="@string/loginName" />

    <TextView
        android:id="@+id/textView1"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="3"
        android:text="@string/name" />

    <TextView
        android:id="@+id/fmsStatus"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="4"
        android:text="@string/email" />

    <EditText
        android:id="@+id/registrationUsername"
        android:layout_column="3"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="1"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/registrationEmail"
        android:layout_column="3"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/registrationName"
        android:layout_column="3"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="3"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/registrationPassword"
        android:layout_column="3"
        android:layout_gravity="center"
        android:layout_row="2"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button2"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="7"
        android:onClick="registerButtonPressed"
        android:text="@string/register" />

    <TextView
        android:id="@+id/registrationStatus"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="8"
        android:visibility="gone"
        android:text="@string/registrationSuccessful"
        android:textColor="#00FF00" />

</GridLayout>