<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="3" 
    android:layout_marginLeft="5dp">

    <ImageView
        android:id="@+id/itemPictureButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/question_mark" />

            <TextView
	            android:id="@+id/name"
	            android:layout_width="match_parent"
	            android:layout_height="30dp"
	            android:padding="5dp"
	            android:text="@string/name" />
    
	        <TextView
	            android:id="@+id/type"
	            android:layout_width="match_parent"
	            android:layout_height="30dp"
	            android:padding="5dp"
	            android:text="Type" />

	        <TextView
	            android:id="@+id/description"
	            android:layout_width="match_parent"
	            android:layout_height="55dp"
				android:padding="5dp"
	            android:text="@string/description" />

	        <TextView
	            android:id="@+id/location"
	            android:layout_width="match_parent"
		        android:layout_height="30dp"
				android:padding="5dp"
	            android:text="@string/location" />

	        <TextView
	            android:id="@+id/category"
	            android:layout_width="match_parent"
	            android:layout_height="30dp"
				android:padding="5dp"
	            android:text="@string/category" />

	        <TextView
	            android:id="@+id/reward"
	            android:layout_width="match_parent"
	            android:layout_height="30dp"
				android:padding="5dp"
	            android:text="@string/reward" />
	        
	        <TextView
	            android:id="@+id/date"
	            android:layout_width="match_parent"
	            android:layout_height="30dp"
				android:padding="5dp"
	            android:text="Date Entered" />

        <Button
            android:id="@+id/lostFoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
			android:layout_marginTop="5dp"
            android:onClick="lostFoundButtonPressed"
            android:text="I lost/found this item"
            android:visibility="gone"/>
        
        <Button
            android:id="@+id/editItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="editItemButtonPressed"
            android:text="Edit Item"
            android:visibility="gone"/>

        <Button
            android:id="@+id/foundMatchesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="foundMatchesButtonPressed"
            android:text="Button" 
            android:visibility="gone"/>
        
</LinearLayout>