<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/register"
        android:textSize="32sp" />

<GridLayout 
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="5"
    android:orientation="vertical"
    android:useDefaultMargins="true" >

<!--  Sets the password string next to the appropriate input box -->
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="2"
        android:text="@string/password" />

<!--  Sets the loginName string next to the appropriate input box -->
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="1"
        android:text="@string/login" />

<!--  Sets the name string next to the appropriate input box -->
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="3"
        android:text="@string/name" />

<!--  Sets the email string next to the appropriate input box -->
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="4"
        android:text="@string/email" />
    
<!--  Sets up the loginInput box -->  

    <EditText
        android:id="@+id/registrationUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:ems="10"
        android:inputType="text" />
    
    <!--  Sets up the emailInput box --> 
    
    <EditText
        android:id="@+id/registrationEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus android:layout_width="wrap_content" />

    </EditText>

<!--  Sets up the nameInput box --> 

    <EditText
        android:id="@+id/registrationName"
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:ems="10"
        android:inputType="textPersonName" />

    <!--  Sets up the passwordInput box -->  
    
    <EditText
        android:id="@+id/registrationPassword"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:ems="10"
        android:inputType="textPassword" />

    
</GridLayout>

<LinearLayout 
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">

    <Button
        android:id="@+id/submitButton"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
		android:layout_marginLeft="70dp"
        android:onClick="submitButtonPressed"
        android:text="@string/submit" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
		android:layout_marginLeft="10dp"
        android:onClick="cancelButtonPressed"
        android:text="Cancel"/>
    
</LinearLayout>
    
</LinearLayout>