<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <TextView
        android:id="@+id/loginName"
        android:layout_width="match_parent"
	    android:layout_height="20dp"
        android:gravity="center"
        android:text="@string/loginName" />
    
	<ImageButton
		android:id="@+id/editItemPictureButton"
		android:layout_width="fill_parent"
		android:layout_height="115dp"
		android:onClick="editItemPictureButtonPressed"
		android:src="@drawable/question_mark" />
	
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:text="@string/addPictureMessage" 
	    android:layout_marginBottom="10dp"/>
	        
<GridLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="5"
    android:useDefaultMargins="true" >
    
    <Button
       	android:id="@+id/editPassword"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="0"
        android:background="@android:color/transparent"
	    android:text="Edit password?" 
        android:textSize="14sp"
	    android:onClick="editPasswordButtonPressed"/>

    <EditText
        android:id="@+id/editEmailInput"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:visibility="gone"/>
    
    <EditText
        android:id="@+id/editPasswordInput"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:ems="10"
        android:inputType="textPassword" 
        android:visibility="gone"/>

    <Button
        android:id="@+id/editEmail"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="1"
        android:background="@android:color/transparent"
        android:text="Edit email?" 
        android:textSize="14sp"
	    android:onClick="editEmailButtonPressed"/>
    
</GridLayout>
	        
        <Button
            android:id="@+id/submitButton"
        android:layout_width="80dp"
        android:layout_height="50dp"
            android:layout_gravity="center"
			android:layout_marginTop="10dp"
            android:onClick="submitButtonPressed"
	        android:textSize="14sp"
            android:text="@string/submit" />
        
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="40dp"
	    android:orientation="horizontal" 
	    android:layout_marginTop="5dp">
	        
	        <Button
	            android:id="@+id/lockButton"
        		android:layout_width="80dp"
        		android:layout_height="50dp"
	            android:layout_gravity="center"
	            android:onClick="lockButtonPressed"
	            android:text="Lock" 
	            android:textSize="14sp"
	        	android:visibility="gone"/>
	        <Button
	            android:id="@+id/unlockButton"
        		android:layout_width="80dp"
        		android:layout_height="50dp"
	            android:layout_gravity="center"
	            android:onClick="unlockButtonPressed"
	            android:text="Unlock" 
	            android:textSize="14sp"
	        	android:visibility="gone"/>
	        
	        <Button
	            android:id="@+id/deleteButton"
        		android:layout_width="80dp"
        		android:layout_height="50dp"
	            android:layout_gravity="center"
	            android:onClick="deleteButtonPressed"
            	android:text="Delete" 
            	android:textSize="14sp"
	        	android:visibility="gone"/>
	        
   </LinearLayout>     
   
	        <Button
	            android:id="@+id/promoteButton"
       			android:layout_width="80dp"
        		android:layout_height="50dp"
	            android:layout_gravity="center"
	            android:onClick="promoteButtonPressed"
	            android:text="Promote" 
       		 	android:textSize="14sp"
	        	android:visibility="gone"/>

</LinearLayout>